# ufaas-shop

./: .gitignore  LICENSE  README.md  docker-compose.yml  sample.env
app/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
app/alembic/versions/: 7c5f4fb00a5a_first_migration.py
app/apps/base/: models.py  routes.py  schemas.py  services.py
app/apps/basket/: models.py  routes.py  schemas.py  services.py
app/apps/business/: middlewares.py  models.py  routes.py  schemas.py
app/apps/payment/: models.py  routes.py  schemas.py  services.py
app/apps/product/: models.py  routes.py  schemas.py
app/apps/purchase/: models.py  routes.py  schemas.py  services.py
app/apps/tenant/: models.py  routes.py  schemas.py
app/apps/voucher/: models.py  routes.py  schemas.py
app/server/: config.py  db.py  server.py
app/tests/: conftest.py  constants.py  test_business.py  test_health.py
app/utils/: currency.py  ipg.py  saas.py  schemas.py  texttools.py  usso.py  wallets.py
